1、ARouter    1、路由替换PathReplaceService    2、参数传递withObject实现    3、动态路由注册（需要1.5.2版本或以上）

--- a/module/arouter/src/main/res/layout/activity_arouter.xml
+++ b/module/arouter/src/main/res/layout/activity_arouter.xml
@@ -11,17 +11,27 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_go_to_with_param_activity"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_100dp"
+            android:layout_height="@dimen/_50dp"
             android:gravity="center"
             android:text="@string/go_to_with_param_activity"
             android:textColor="@color/black"
-            android:textSize="@dimen/_30sp"
+            android:textSize="@dimen/_16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/dynamic_route_registration"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
     </LinearLayout>
