--- a/lib/comnlib/src/main/res/layout/activity_base_result_of_display.xml
+++ b/lib/comnlib/src/main/res/layout/activity_base_result_of_display.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <data>
-
-    </data>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tv_show"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/login"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="@dimen/_30sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
     </FrameLayout>
 </layout>
