--- a/module/arouter/src/main/res/layout/activity_pretreatment_service.xml
+++ b/module/arouter/src/main/res/layout/activity_pretreatment_service.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -10,10 +13,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/real_name"
+            android:text="@string/pretreatment_service"
             android:textColor="@color/black"
             android:textSize="@dimen/_30sp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
+            android:textStyle="bold" />
     </FrameLayout>
 </layout>
