1、ARouter 全局降级策略

--- a/module/arouter/src/main/res/layout/activity_arouter.xml
+++ b/module/arouter/src/main/res/layout/activity_arouter.xml
@@ -34,5 +34,16 @@
             android:textSize="@dimen/_16sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/degrade_service"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50dp"
+            android:gravity="center"
+            android:text="@string/degrade_service"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 </layout>
